# DefineRights

./: Cargo.toml
pallets/authRight/: Cargo.toml
pallets/authRight/src/: lib.rs  storagestruct.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  storagestruct.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
